# seer-nnue

./: CMakeLists.txt
include/: evaluate.h  move.h  move_orderer.h  move_picker.h  nnue_half_kp.h  nnue_util.h  random_variable.h  search.h  thread_barrier.h  thread_worker.h  uci.h
test/: test_evaluate.cc  test_evaluate_perf.cc  test_move_orderer.cc  test_nnue_perf.cc  test_propagate.cc  test_rv.cc  test_search.cc  test_thread_barrier.cc
train/: config.yaml  model.py  nnue_bin_dataset.py  test_model.py  train.py  util.py
